# kde-yaru

./: meson.build  meson_options.txt
aurorae/: meson.build
aurorae/org.kwin.aurorae.yaru/: alldesktops.svgz  close.svgz  help.svgz  keepabove.svgz  keepbelow.svgz  maximize.svgz  metadata.desktop  minimize.svgz  org.kwin.aurorae.yarurc  restore.svgz  shade.svgz
aurorae/org.kwin.aurorae.yaru.dark/: 23.svgz  alldesktops.svgz  close.svgz  help.svgz  keepabove.svgz  keepbelow.svgz  maximize.svgz  metadata.desktop  minimize.svgz  org.kwin.aurorae.yaru.darkrc  restore.svgz  shade.svgz  template.svgz
aurorae/org.kwin.aurorae.yaru.light/: close.svgz  maximize.svgz  metadata.desktop  minimize.svgz  restore.svgz
colors/: Yaru.colors  Yarudark.colors  meson.build
icons/: index.theme
